tests/rosetta/transpiler/FS/bell-numbers.error
compile: exit status 1
F# Compiler for F# 4.0 (Open Source Edition)
Freely distributed under the Apache 2.0 Open Source License

/workspace/mochi/tests/rosetta/transpiler/FS/bell-numbers.fs(3,1): warning FS0221: The declarations in this file will be placed in an implicit module 'Bell-numbers' based on the file name 'bell-numbers.fs'. However this is not a valid F# identifier, so the contents will not be accessible from other files. Consider renaming the file or adding a 'module' or 'namespace' declaration at the top of the file.

/workspace/mochi/tests/rosetta/transpiler/FS/bell-numbers.fs(37,26): error FS0001: This expression was expected to have type
    bigint    
but here has type
    int    

/workspace/mochi/tests/rosetta/transpiler/FS/bell-numbers.fs(59,50): error FS0039: The value or constructor 'padStart' is not defined
